--- a/thanks.html
+++ b/thanks.html
@@ -30,8 +30,8 @@
 
 	<div class="main-content">
 		<i class="fa fa-check main-content__checkmark" id="checkmark"></i>
-		<p class="main-content__body" data-lead-id="main-content-body">Thank you for using our service to securely process your payment via online banking.  Please allow a few moments for processing and up to two business days if payment was made during weekend hours.  </p>
-	<a href="index.html">Return to Payment Page</a>
+		<p class="main-content__body" data-lead-id="main-content-body">Thank you for using our service to securely process your payment via online banking.  Please allow a few moments for processing and up to two business days if payment was made during weekend hours.  <a href="index.html">Return to Payment Page</a></p>
+	
 	</div>
 	
 	
